--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script type="text/javascript">
-        window.location.href = "index.php";
+        window.location.href = "https://stradtkt.github.io/index.php";
     </script>
 
     
